updated to ionic 1.5

--- a/www/index.html
+++ b/www/index.html
@@ -8,14 +8,9 @@
         <link href="css/ionic.app.css" rel="stylesheet">
 
         <!-- ionic/angularjs js -->
-        <script src="vendor/ionic/release/js/ionic.bundle.js"></script>
+        <script src="vendor/ionic/js/ionic.bundle.js"></script>
         <!-- vendor js -->
         <!-- bower:js -->
-
-        <script src="vendor/ionic/release/js/ionic-angular.js"></script>
-        <script src="vendor/angular-animate/angular-animate.js"></script>
-        <script src="vendor/angular-sanitize/angular-sanitize.js"></script>
-        <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
         <script src="vendor/ngCordova/dist/ng-cordova.js"></script>
         <!-- endbower -->
 
